# fastapi_demo

./: .env.example  .gitignore  pyproject.toml  requirements.txt  sqlddl.sql  sqlreference.sql  核心数据库设计规范.md
.coder-ide/rules/: new-rules.yaml
app/: asyncio_sqlalchemy.py  main.py  pydantic_model_check_field.py  pydantic_model_check_simple.py  pydantic_nested_model copy.py  sqlalchemy_cache.py  sqlalchemy_event_listen.py
app_backup/1.1.1 快速启动 FastAPI 项目/: 01_fastapi.py
app_backup/1.2.2.1 Path Params/: path_params_1.py  path_params_2.py
app_backup/1.3.1.1 JSON Request Body/: request_body_json.py
app_backup/1.3.1.2 Form Request Body/: request_body_form_simple.py
app_backup/1.3.1.3 File Request Body/: request_body_form_multipart.py
app_backup/1.4.2.2 字段验证/: pydantic_model_check_simple.py
app_backup/2.1.1.1 threading 线程基础/: threading_thread_local_data.py
app_backup/2.1.1.2 线程同步Thread Synchronization/: thread_sync_BoundedSemaphore.py  thread_sync_Semaphore.py  thread_sync_condition.py  thread_sync_rlock_1.py
app_backup/2.1.1.3 线程通信Thread Communication/: thread_communication_event.py  thread_communication_queue.py  thread_communication_queue_error.py  thread_communication_queue_priority.py
app_backup/2.1.2.2 任务管理/: asyncio_task_manager_wait.py
app_backup/2.1.2.3 异步 IO/: asyncio_queue.py
backend/: .gitignore  auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/api/: users.py
backend/app/: main.py  models.py  schemas.py
backend/app/api/: users.py
backend/app/services/: token_service.py
backend/services/: auth.py
backend/zzz_fastapi_backup/1.2.2.2 Query Params/: query_params_1.py
backend/zzz_fastapi_backup/2.1.1.3 线程通信Thread Communication/: thread_communication_queue_lifo.py
backend/zzz_fastapi_backup/2.1.1.4 线程池ThreadPool/: threadpool_future_as_completed.py  threadpool_handle_result.py
backend/zzz_fastapi_backup/2.1.2.1 异步基础/: asyncio_start.py
backend/zzz_fastapi_backup/2.1.2.2 任务管理/: asyncio_task_manager_wait_for.py
backend/zzz_fastapi_backup/2.1.4 异步sqlalchemy用户管理系统/: .env.example  requirements.txt
backend/zzz_fastapi_backup/2.1.4 异步sqlalchemy用户管理系统/crud/: user.py
backend/zzz_fastapi_backup/2.1.4 异步sqlalchemy用户管理系统/schemas/: user.py
backend/zzz_fastapi_backup/2.1.4 异步sqlalchemy用户管理系统/tests/: test_crud_user.py
backend/zzz_fastapi_backup/2.2.1 Middleware基础知识/: middleware_record_time.py
backend/zzz_fastapi_backup/2.2.2 常见中间件功能/: middleware_common_cors.py  middleware_common_gzip.py
backend/zzz_fastapi_backup/2.3.2 JWT 双 Token Demo/app/: main.py  schemas.py
backend/zzz_fastapi_backup/2.3.2 JWT 双 Token Demo/app/api/: users.py
backend/zzz_fastapi_basic_backup/1.2.1 定义路由/: main.py
backend/zzz_fastapi_basic_backup/1.3.1.4 User Define Request Body/: request_body_ud_yaml.py
backend/zzz_fastapi_basic_backup/1.3.2.2 响应状态码 Response Status Code/: response_status_code.py
backend/zzz_fastapi_basic_backup/1.4.2.2 字段验证/: pydantic_model_field_alias.py  pydantic_model_field_check.py
backend/zzz_fastapi_basic_backup/2.1.3 异步视图函数/: asyncio_databases.py
backend/zzz_fastapi_basic_backup/2.1.4 异步sqlalchemy用户管理系统/: .env.example  README.md
backend/zzz_fastapi_basic_backup/2.2.3 Middleware 性能思考/: middleware_user_session.py
backend/zzz_fastapi_basic_backup/2.3.2 JWT 双 Token Demo/: .env.example
backend/zzz_fastapi_basic_backup/2.3.2 JWT 双 Token Demo/app/db/: database.py
backend/zzz_fastapi_basic_backup/2.3.2 JWT 双 Token Demo/app/services/: token_service.py
backend/zzz_fastapi_test_backup/2.1 单元测试/app/: main.py
backend/zzz_fastapi_test_backup/2.1 单元测试/tests/: test_main.py
backend/zzz_sqlalchemy_backup/1.3 ORM定义/: sqlalchemy_orm_field_constraint.py
backend/zzz_sqlalchemy_backup/2 Async/: sqlalchemy_async_complex_crud.py
backend/zzz_sqlalchemy_backup/3.1 relationship/: sqlalchemy_relationship_lazy_cascade.py
config/: config.ini
fastapi_backup/1.3.2.1 响应模型的定义和使用/: response_model_user.py
fastapi_backup/2.1.1.4 线程池ThreadPool/: threadpool_future_error.py
fastapi_backup/2.1.3 异步视图函数/: asyncio_asyncpg.py  asyncio_databases.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  app.ts  main.ts
sqlalchemy_backup/1.1 Engine 和 Connection/: sqlalchemy_engine_conn.py
sqlalchemy_backup/1.2 Session/: sqlalchemy_session.py
sqlalchemy_backup/1.3 ORM定义/: sqlalchemy_orm_field_constraint.py
sqlalchemy_backup/1.4 查询构建器/: sqlalchemy_crud.py
sqlalchemy_backup/2 Async/: sqlalchemy_async_complex_crud.py  sqlalchemy_async_crud.py  sqlalchemy_async_engine.py
sqlalchemy_backup/3.2 events 事件监听/: sqlalchemy_event_listen.py  sqlalchemy_event_listen_for.py
sqlalchemy_backup/3.3 缓存机制/: sqlalchemy_cache.py
zzz_fastapi_backup/2.1.1.1 threading 线程基础/: threading_thread_work.py
zzz_fastapi_backup/2.1.2.3 异步 IO/: asyncio_io.py
(+55 files in other folders)
