[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


# ==============================
# 🛠️ Ruff 配置（Lint + Format）
# ==============================
[tool.ruff]
# 启用预览功能（含类型感知 lint、新规则、更智能修复）
preview = true

# 行长（与 formatter 一致）
line-length = 120       # E501 设置 行长

# 忽略的路径（支持 glob）
extend-exclude = [
  ".git",
  "__pycache__",
  "venv",
  ".venv",
  "build",
  "dist",
  "notebooks",        # Jupyter 笔记本通常不 lint
  "zzz_fastapi_backup/*",
  "zzz_sqlalchemy_backup/*",
]

# 自动修复安全问题（CI 中建议开启）
fix = true
unsafe-fixes = false  # 默认不应用可能改变语义的修复

# ==============================
# 🔍 Lint 规则配置
# ==============================
[tool.ruff.lint]
# 启用的规则集（按前缀选择）
# E/W: pycodestyle, F: pyflakes, I: isort,
# UP: pyupgrade, C4: comprehensions, TID: tidy imports,
# ARG: unused args, PTH: pathlib, PL: pylint subset
select = [
  "E", "W", "F",
  "I",
  "UP",
#   "C4",
#   "TID",
#   "ARG",
#   "PTH",
  # "PL",  # pylint 规则较严格，按需启用
]
# 忽略的规则
ignore = [
  "E501",  # 行长交给 formatter 处理
  "D",     # 忽略 docstring 规则（可用 pydoclint 替代）
]

# ==============================
# 🧹 isort 配置（Ruff 内置）
# ==============================
[tool.ruff.lint.isort]
# 已知的一等包（会放在 import 分组顶部）
known-first-party = ["my_project"]
# 合并 from ... import (a, b) → from ... import a, b
combine-as-imports = true
# 强制按字母排序
force-sort-within-sections = true

# ==============================
# ✨ Formatter 配置（替代 Black）
# ==============================
[tool.ruff.format]
# 使用双引号
quote-style = "double"